# studysync-ai

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agent/: indexing.py
app/llm/: gemini.py  multimodal.py
src/studysync/: example.env  main.py
src/studysync/llm/: pdfRag.py
src/studysync/processor/: gemini.py
src/studysync/processor/conversation/: parser.py  prompts.py
src/studysync/routers/: api.py
src/studysync/test/: partitioning.py
src/studysync/utils/: config.py  models.py  state.py  temp.py
