[project]
name = "studysync"
version = "0.1"
dependencies = [
  "fastapi==0.111.0",
  "ipython==8.25.0",
  "langchain==0.2.5",
  "langchain-community==0.2.5",
  "langchain-google-genai==1.0.7",
  "langchain-text-splitters==0.2.1",
  "langsmith==0.1.82",
  "pillow==10.3.0",
  "pydantic==2.7.4",
  "pypdf==4.2.0",
  "uvicorn==0.30.1",
  "bs4==0.0.2",
  "langchain_chroma",
  "langchainhub",
  "qdrant-client",
  "unstructured[all-docs]"
]

[project.optional-dependencies]
dev = [
  "black"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
studysync = "studysync.main:run"